helm/external/clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clickhouse-service
  name: clickhouse-service
spec:
  externalName: 
  selector:
    app: clickhouse-service
  type: ExternalName
status:
  loadBalancer: {}
