helm/external/database.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-service
  name: postgres-service
spec:
  externalName: 
  selector:
    app: postgres-service
  type: ExternalName
status:
  loadBalancer: {}
