helm/external/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-service
  name: kafka-service
spec:
  externalName: 
  selector:
    app: kafka-service
  type: ExternalName
status:
  loadBalancer: {}
