helm/external/redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-service
  name: redis-service
spec:
  externalName: 
  selector:
    app: redis-service
  type: ExternalName
status:
  loadBalancer: {}
